src/test/ui/type-alias-impl-trait/coherence.min_tait.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/coherence.rs:17:6
   |
LL | impl<T> foreign_crate::ForeignTrait for AliasOfForeignType<T> {}
   |      ^ unconstrained type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
